[FIX] Fixed delay on mobile home scroll, scroll direction

--- a/assets/styles/components/_carousel.scss
+++ b/assets/styles/components/_carousel.scss
@@ -9,7 +9,7 @@
 	@include homeLarge{
 		margin: 0 5px;
 	}
-	@include homeMediumLandscape{
+	@include mobileLandscape{
 		display: none;
 	}
 }
