--- a/assets/styles/components/_loader.scss
+++ b/assets/styles/components/_loader.scss
@@ -25,6 +25,10 @@
 		// top: 10px;
 	}
 
+	@include mobileLandscape {
+		top: 40px;
+	}
+
 	@include homeSmall{
 		// top: 150px;
 	}
@@ -43,6 +47,10 @@
 	@include homeSmallMobile{
 		font-size: 18px;
 		bottom: 50px;
+	}
+
+	@include mobileLandscape {
+		top: 260px;
 	}
 }
 
@@ -65,6 +73,9 @@
     width: 100%;
     bottom: 20px;
     animation: fadeIn .9s;
+	@include mobileLandscape {
+		top: 300px;
+	}
 }
 
 .loading__progress{
